# herald

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.cmake
.github/workflows/: cmake-multi-platform.yml  cmake.yml
include/Herald/: BaseLogTransformer.hpp  BaseLogTransformerBuilder.hpp  FileWriterFactory.hpp  GetTimeStamp.hpp  Herald.hpp  HeraldJSON.hpp  ILogTransformer.hpp  ILogTransformerBuilder.hpp  ILogWriter.hpp  ILogWriterBuilder.hpp  JsonLogTransformerFactory.hpp  LogEntry.hpp  LogLevels.hpp  LogToStdErr.hpp  Logger.hpp  SimpleLogTransformerFactory.hpp  TransformerBuilder.hpp  WriterBuilder.hpp
src/: BaseLogTransformer.cpp  BaseLogTransformerBuilder.cpp  CMakeLists.txt  FileLogWriter.cpp  Herald.cpp  JsonLogTransformer.cpp  LogToStdErr.cpp  Logger.cpp  SimpleLogTransformer.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  test_filelogwriter.cpp  test_helpers.cpp  test_helpers.hpp  test_helpers_determine_complexity.cpp  test_helpers_measure_execution_time.cpp  test_helpers_measure_time_complexity.cpp  test_helpers_to_string_complexity_enum.cpp  test_herald.cpp  test_ilogtransformer.cpp  test_ilogwriter.cpp  test_json.cpp  test_jsontransformer.cpp  test_log_enable.cpp  test_timestamps.cpp
